@@ -622,6 +622,7 @@ add_routes (struct route_list *rl, const struct tuntap *tt, unsigned int flags, 
 	  management_set_state (management,
 				OPENVPN_STATE_ADD_ROUTES,
 				NULL,
+				0,
 				0);
 	}
 #endif
